fix: Inline `time-picker` with `is-24="false"` overflowing the container (fixes #990)

--- a/src/VueDatePicker/style/components/_SelectionOverlay.scss
+++ b/src/VueDatePicker/style/components/_SelectionOverlay.scss
@@ -61,7 +61,7 @@
   padding: 0;
   box-sizing: border-box;
   display: flex;
-  margin-inline: auto auto;
+  margin-inline: auto;
   flex-wrap: wrap;
   max-width: 100%;
   width: 100%;
